--- a/experiment/simulation/formula.html
+++ b/experiment/simulation/formula.html
@@ -7,9 +7,9 @@
 			<h4>Where,</h4>
 
 					
-						    <h4>C   = Capacitance in µF<br>
-							r1 = radius of inner cylinder/pipe for ‘pipe in pipe’ type probe<br>
-							r2 = radius of outer cylinder/pipe for ‘pipe in pipe’ type probe<br>
+						    <h4>C   = Capacitance in &mu;F<br>
+							r1 = radius of inner cylinder/pipe for 'pipe in pipe' type probe<br>
+							r2 = radius of outer cylinder/pipe for 'pipe in pipe' type probe<br>
 							&epsilon;<sub>0</sub> = permittivity of the space = 8.85 x 10<sup>-12</sup><br>
 							&epsilon;<sub>1</sub> = permittivity of air =1<br>
 							&epsilon;<sub>2</sub>= Dielectric constant of the process fluid/selected service<br>
